index.css
@import url('https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap');

:root {
    --body-bg: #303A52;
    --panel-bg: #39445F;
    --nav-bg: #2C354A;
    --text-primary: #ffffff;
    --text-secondary: #A5B2D3;
    --text-bg: #56b3ca;
    --svg-fill: #ffffff;
}

* {
    box-sizing: border-box;
}

html, body {
    margin: 0;
}

/*======= GENERAL STYLE =======*/
body {
    background: var(--body-bg);
    font-family: 'Nunito', sans-serif;
    color: var(--text-secondary);
    padding: .5em;
    height: 100vh;
    text-align:center;
}

ul{
    padding: 0;
    list-style: none;
}

li {
    text-align: center;
}

a {
    padding: 0;
    text-decoration: none;
    color: var(--text-primary);
}

h1 {
    color: var(--text-primary);
    margin-top: 1em;
}

h3 {
    color: var(--text-bg);
    font-size: 1.5em;
}

.inner-wrapper {
    padding: 1em;
}

span {
    color: var(--text-bg);
    font-weight: bolder;
    font-size: 1.2em;
}

img {
    margin-top: 1em;
    width: 5em;
    height: 5em;
    border-radius: 0.5em;
}

/*======= NAV BAR =======*/
nav {
    position: fixed;
    visibility: hidden;
    background: var(--nav-bg);
    top: 0;
    left: 0;
    width: 80%;
    height: 100vh;
    transform: translateX(-50%);
    opacity: 0;
    transition: 0.3s;
    text-align: left;
}

.nav-open{
    visibility: unset;
    opacity: 1;
    transform: translateX(0);
}

nav p {
    margin-bottom: 0;;
}

#nav-intro {
    color: var(--text-bg);
}

nav li a{
    font-size: 1.2em;
    padding: .8em 1em;
    display: block;
}

nav li a:hover{
    color: var(--text-bg);
}
/*======= HEADER =======*/
header {
    display: flex;
    align-items: center;
    justify-content: center;
}

#name {
    text-decoration-color: var(--text-bg);
    font-size: 1.5em;
}

svg {
    width: 1.5em;
    cursor: pointer;
}

path {
    fill: var(--svg-fill);
}

.logo {
    font-weight: bold;
    margin: 0 1em;
}

.left-btn {
    margin-left: auto;
    background: var(--text-bg);
    padding: .2em .4em;
    border-radius: .2em;
    font-size: .9em;
    color: var(--body-bg);
    font-weight: bold;
}

/*======= MAIN =======*/

.panel {
    background: var(--panel-bg);
    border-radius: .3em;
    padding: 0.5em 1em;
    margin-bottom: 2em;
}

p {
    font-size: 1.2em;
    line-height: 1.6em;
}

.data {
    display: flex;
    flex-direction: column;
}

/*======= PROJECTS =======*/

.projects {
    display: flex;
    flex-direction: column;
    text-align: center;
}

.project-container {
    margin: 1em;
    max-width: 450px;
}

.project-header {
    margin-bottom: 0;
}

.project-image {
    width: 100%;
    height: 50%;
    max-width: 450px;
}

.project-link {
    color: var(--text-bg);
    display: block;
    margin-bottom: 1em;
    margin-top: 1em;
    font-weight: bolder;
    font-size: 1.2em;
}

.project-link:hover{
    color: var(--text-bg);
}

/*=========== MEDIA QUERY =========*/

@media (min-width: 420px){
    body {
        text-align: left;
        padding: 1em;
    }

    .data {
        flex-direction: row;
        justify-content: space-around;
    }
}

@media (min-width: 550px) {
    nav {
        width: 40%;
    }
    nav ul li{
        text-align: left;
    }
}

@media (min-width: 720px) {
    body {
        padding: 1.5em;
    }
    nav {
        width: 30%;
    }
}

@media (min-width: 850px) {
    body {
        display: grid;
        grid-template-columns: 200px auto;
        grid-template-rows: 70px auto;
        grid-template-areas:
            "sidebar header"
            "sidebar main";
        padding: 0;
    }

    header, main {
        padding: 1.5em;
    }
    
    nav {
        grid-area: sidebar;
        opacity: 1;
        visibility: unset;
        transform: translateX(0);
        width: 100%;
        position: unset;
    }
    
    header {
        grid-area: header;
    }
    
    main {
        grid-area: main;
    }
    svg {
        display: none;
    }
}

@media (min-width: 1200px){
    .projects {
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-around;
    }

    .project-container{
        width: 50%;
    }
}

